--- a/browser/package.json
+++ b/browser/package.json
@@ -22,15 +22,20 @@
     "@types/aes-js": "^3.1.1",
     "@types/fingerprintjs2": "^2.0.0",
     "@types/jquery": "^2.0.54",
+    "@types/lz-string": "^1.3.34",
     "@types/qunit": "^2.5.0",
     "@types/socket.io-client": "^1.4.33",
     "aes-js": "^3.1.2",
     "axios": "^0.19.2",
     "codemirror": "^5.57.0",
+    "css-element-queries": "^1.2.3",
     "del": "^6.0.0",
     "jquery": "^3.5.1",
     "jqwidgets-framework": "^9.1.6",
+    "lz-string": "^1.4.4",
     "moxios": "^0.4.0",
+    "ngraph.graph": "^20.0.0",
+    "ngraph.path": "^1.3.1",
     "qunit": "^2.11.2",
     "simplebar": "^5.2.1",
     "socket.io-client": "^2.3.0",
@@ -44,7 +49,9 @@
     "@node-minify/html-minifier": "^6.1.0",
     "@node-minify/no-compress": "^6.1.0",
     "@node-minify/terser": "^6.1.0",
+    "@types/resize-observer-browser": "^0.1.6",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^4.0.0",
     "fs-extra": "^2.1.2",
     "html-webpack-plugin": "^4.4.1",
     "typescript": "^3.9.7",
