--- a/browser/static/public/mapperVersion.json
+++ b/browser/static/public/mapperVersion.json
@@ -1,5 +1,5 @@
 {
-	"version": 1,
-	"message": "Primo upload",
-	"date": "01.02.2022"
+	"version": 2,
+	"message": "Correzioni num. location",
+	"date": "02.02.2022"
 }
