--- a/browser/package.json
+++ b/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mudslinger-browser",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/msimic/mudslinger"
@@ -49,6 +49,7 @@
     "@node-minify/html-minifier": "^6.1.0",
     "@node-minify/no-compress": "^6.1.0",
     "@node-minify/terser": "^6.1.0",
+    "@types/node": "^17.0.13",
     "@types/resize-observer-browser": "^0.1.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^4.0.0",
