--- a/browser/package.json
+++ b/browser/package.json
@@ -1,21 +1,39 @@
 {
-  "name": "mudslinger-browser",
-  "version": "1.0.1",
+  "name": "ts2-client",
+  "description": "Tempora Sanguinis 2 Client",
+  "main": "electron_main.js",
+  "version": "1.0.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/msimic/mudslinger"
   },
-  "description": "TS2 Web Client",
+  "keywords": [
+    "mud",
+    "tempora",
+    "sanguinis",
+    "web",
+    "electron"
+  ],
+  "author": "Marino Šimić <marino.simic@gmail.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/msimic/mudslinger/issues"
+  },
   "scripts": {
-    "postinstall": "node tools/postinstall.js",
+    "postinstall": "node tools/postinstall.js && electron-builder install-app-deps",
     "compile": "tsc -p tsconfig.json",
     "build": "node tools/genAppInfo.js \"git rev-parse HEAD\" && node tools/generateHtmlHashes.js && tsc --sourceMap false -p tsconfig.json && webpack && node tools/build.js",
     "build-dev": "node tools/genAppInfo.js \"git rev-parse HEAD\" && tsc -p tsconfig.json && webpack --mode=development --config webpack.config.dev.js",
     "start": "tsc -p tsconfig.json && webpack-dev-server --config ./webpack.config.dev.js --inline --hot",
     "build-test": "tsc -p tsconfig.test.json && webpack --config webpack.config.test.js",
     "build-test-output": "tsc -p tsconfig.test.json && webpack --config webpack.config.test_output.js",
-    "build-migrate": "tsc -p migrate/tsconfig.json && webpack --config migrate/webpack.config.migrateFrom.js && webpack --config migrate/webpack.config.migrateTo.js"
+    "build-migrate": "tsc -p migrate/tsconfig.json && webpack --config migrate/webpack.config.migrateFrom.js && webpack --config migrate/webpack.config.migrateTo.js",
+    "electron": "electron .",
+    "electronWindows": "rm -f dist/public/cacheServiceWorker.js && electron-builder --win --x64",
+    "electronMac": "rm -f dist/public/cacheServiceWorker.js && electron-builder --mac --x64",
+    "electronLinuxBuild": "rm -f dist/public/cacheServiceWorker.js && electron-builder --linux --x64",
+    "electronLinux": "node tools/dockerCheck.js && node tools/linux-electron-build.js \"%PWD%\" \"electronuserland/builder\"",
+    "publish": "npm run electronWindows && npm run electronLinux && npm run electronMac"
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^2.1.4",
@@ -41,7 +59,8 @@
     "socket.io-client": "^2.3.0",
     "strip-ansi": "^6.0.0",
     "ts-loader": "^8.0.3",
-    "ts-md5": "^1.2.7"
+    "ts-md5": "^1.2.7",
+    "electron-is-dev": "^1.2.0"
   },
   "devDependencies": {
     "@node-minify/clean-css": "^6.1.0",
@@ -53,11 +72,62 @@
     "@types/resize-observer-browser": "^0.1.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^4.0.0",
+    "cross-var": "^1.1.0",
+    "electron": "^9.4.4",
+    "electron-builder": "^20.44.4",
+    "electron-reload": "^1.5.0",
     "fs-extra": "^2.1.2",
     "html-webpack-plugin": "^4.4.1",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "build": {
+    "productName": "ts2-client",
+    "remoteBuild": false,
+    "appId": "ts2.client",
+    "files": [
+      "!**/*",
+      "!**/node_modules/**",
+      "dist/public/**",
+      "src/icons/**",
+      "electron_main.js",
+      "package.json",
+      "node_modules/electron-is-dev"
+    ],
+    "directories": {
+      "output": "dist/electron"
+    },
+    "dmg": {
+      "contents": [
+        {
+          "x": 410,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 130,
+          "y": 150,
+          "type": "file"
+        }
+      ]
+    },
+    "mac": {
+      "icon": "src/icons/favicon-256x256.icns",
+      "artifactName": "${productName}-${version}-${os}-${arch}.${ext}"
+    },
+    "win": {
+      "target": "portable",
+      "icon": "src/icons/icon.ico",
+      "artifactName": "${productName}-${version}-${os}-${arch}.${ext}"
+    },
+    "linux": {
+      "icon": "src/icons/favicon-256x256.png",
+      "target": ["deb","rpm"],
+      "artifactName": "${productName}-${version}-${os}-${arch}.${ext}"
+    },
+    "deb": {}
   }
 }
