--- a/browser/static/public/mapperVersion.json
+++ b/browser/static/public/mapperVersion.json
@@ -1,5 +1,5 @@
 {
-	"version": 2,
-	"message": "Correzioni num. location",
-	"date": "02.02.2022"
+	"version": 3,
+	"message": "Molte nuove zone ripassate",
+	"date": "12.02.2022"
 }
