--- a/browser/package.json
+++ b/browser/package.json
@@ -20,7 +20,8 @@
     "url": "https://github.com/msimic/mudslinger/issues"
   },
   "scripts": {
-    "postinstall": "node tools/postinstall.js && electron-builder install-app-deps",
+    "postinstall": "node tools/postinstall.js && npm run electronpostinstall",
+    "electronpostinstall": "electron-builder install-app-deps",
     "compile": "tsc -p tsconfig.json",
     "webpack": "webpack",
     "build": "node tools/genAppInfo.js \"git rev-parse HEAD\" && node tools/generateHtmlHashes.js && tsc --sourceMap false -p tsconfig.json && webpack && node tools/build.js",
@@ -37,52 +38,52 @@
     "publish": "npm run electronWindows && npm run electronLinux && npm run electronMac"
   },
   "dependencies": {
-    "@fingerprintjs/fingerprintjs": "^2.1.4",
+    "@fingerprintjs/fingerprintjs": "^2.1.5",
     "@types/aes-js": "^3.1.1",
     "@types/fingerprintjs2": "^2.0.0",
-    "@types/jquery": "^2.0.54",
+    "@types/jquery": "^2.0.60",
     "@types/lz-string": "^1.3.34",
-    "@types/qunit": "^2.5.0",
-    "@types/socket.io-client": "^1.4.33",
+    "@types/qunit": "^2.11.3",
+    "@types/socket.io-client": "^1.4.36",
     "aes-js": "^3.1.2",
     "axios": "^0.19.2",
-    "codemirror": "^5.57.0",
+    "codemirror": "^5.65.1",
     "css-element-queries": "^1.2.3",
     "del": "^6.0.0",
-    "jquery": "^3.5.1",
+    "electron-is-dev": "^1.2.0",
+    "jquery": "^3.6.0",
     "jqwidgets-framework": "^9.1.6",
     "lz-string": "^1.4.4",
     "moxios": "^0.4.0",
     "ngraph.graph": "^20.0.0",
-    "ngraph.path": "^1.3.1",
-    "qunit": "^2.11.2",
-    "simplebar": "^5.2.1",
-    "socket.io-client": "^2.3.0",
-    "strip-ansi": "^6.0.0",
-    "ts-loader": "^8.0.3",
-    "ts-md5": "^1.2.7",
-    "electron-is-dev": "^1.2.0"
+    "ngraph.path": "^1.4.0",
+    "qunit": "^2.17.2",
+    "simplebar": "^5.3.6",
+    "socket.io-client": "^2.4.0",
+    "strip-ansi": "^6.0.1",
+    "ts-loader": "^8.3.0",
+    "ts-md5": "^1.2.11"
   },
   "devDependencies": {
-    "@node-minify/clean-css": "^6.1.0",
-    "@node-minify/core": "^6.1.0",
-    "@node-minify/html-minifier": "^6.1.0",
-    "@node-minify/no-compress": "^6.1.0",
-    "@node-minify/terser": "^6.1.0",
-    "@types/node": "^17.0.13",
-    "@types/resize-observer-browser": "^0.1.6",
+    "@node-minify/clean-css": "^6.2.0",
+    "@node-minify/core": "^6.2.0",
+    "@node-minify/html-minifier": "^6.2.0",
+    "@node-minify/no-compress": "^6.2.0",
+    "@node-minify/terser": "^6.2.0",
+    "@types/node": "^17.0.16",
+    "@types/resize-observer-browser": "^0.1.7",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^4.0.0",
     "cross-var": "^1.1.0",
     "electron": "^9.4.4",
-    "electron-builder": "^20.44.4",
+    "electron-builder": "^22.9.1",
     "electron-reload": "^1.5.0",
     "fs-extra": "^2.1.2",
-    "html-webpack-plugin": "^4.4.1",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
+    "html-webpack-plugin": "^4.5.2",
+    "typescript": "^3.9.10",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.3"
   },
   "build": {
     "productName": "ts2-client",
@@ -126,7 +127,10 @@
     },
     "linux": {
       "icon": "src/icons/favicon-256x256.png",
-      "target": ["deb","rpm"],
+      "target": [
+        "deb",
+        "rpm"
+      ],
       "artifactName": "${productName}-${version}-${os}-${arch}.${ext}"
     },
     "deb": {}
