fixes and improvements

--- a/browser/.vscode/settings.json
+++ b/browser/.vscode/settings.json
@@ -22,5 +22,7 @@
         "**/static/**/*.js.map": true,
         "**/build/**/*.js": true,
         "**/build/**/*.js.map": true,
+        "**/dist": true,
+        "**/_dist": true,
     },
 }
