--- a/browser/.vscode/tasks.json
+++ b/browser/.vscode/tasks.json
@@ -26,7 +26,7 @@
               "background": {
                 "activeOnStart": true,
                 "beginsPattern": "Project is running",
-                "endsPattern": "Compiled successfully"
+                "endsPattern": "compiled successfully"
               }
             }
         }
