--- a/browser/package.json
+++ b/browser/package.json
@@ -5,7 +5,7 @@
   "version": "1.1.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/msimic/mudslinger"
+    "url": "https://github.com/msimic/TS2-Client"
   },
   "keywords": [
     "mud",
@@ -17,7 +17,7 @@
   "author": "Marino Šimić <marino.simic@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/msimic/mudslinger/issues"
+    "url": "https://github.com/msimic/TS2-Client/issues"
   },
   "scripts": {
     "postinstall": "node tools/postinstall.js && npm run electronpostinstall",
@@ -26,7 +26,7 @@
     "webpack": "webpack",
     "build": "node tools/genAppInfo.js \"git rev-parse HEAD\" && node tools/generateHtmlHashes.js && tsc --sourceMap false -p tsconfig.json && webpack && node tools/build.js",
     "build-dev": "node tools/genAppInfo.js \"git rev-parse HEAD\" && tsc -p tsconfig.json && webpack --mode=development --config webpack.config.dev.js",
-    "start": "tsc -p tsconfig.json && webpack-dev-server --config ./webpack.config.dev.js --inline --hot",
+    "start": "tsc -p tsconfig.json && webpack-dev-server --config ./webpack.config.dev.js --hot",
     "build-test": "tsc -p tsconfig.test.json && webpack --config webpack.config.test.js",
     "build-test-output": "tsc -p tsconfig.test.json && webpack --config webpack.config.test_output.js",
     "build-migrate": "tsc -p migrate/tsconfig.json && webpack --config migrate/webpack.config.migrateFrom.js && webpack --config migrate/webpack.config.migrateTo.js",
