--- a/browser/package.json
+++ b/browser/package.json
@@ -2,7 +2,7 @@
   "name": "ts2-client",
   "description": "Tempora Sanguinis 2 Client",
   "main": "electron_main.js",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/msimic/TS2-Client"
@@ -51,6 +51,7 @@
     "css-element-queries": "^1.2.3",
     "del": "^6.0.0",
     "electron-is-dev": "^1.2.0",
+    "hotkeys-js": "^3.8.7",
     "jquery": "^3.6.0",
     "jqwidgets-framework": "^9.1.6",
     "lz-string": "^1.4.4",
