--- a/browser/static/public/mapperVersion.json
+++ b/browser/static/public/mapperVersion.json
@@ -1,5 +1,5 @@
 {
-	"version": 3,
-	"message": "Molte nuove zone ripassate",
-	"date": "12.02.2022"
+	"version": 5,
+	"message": "Nuove correzioni alle mappe",
+	"date": "23.04.2022"
 }
