--- a/browser/static/public/mapperVersion.json
+++ b/browser/static/public/mapperVersion.json
@@ -1,5 +1,5 @@
 {
-	"version": 8,
-	"message": "Nuove correzioni alle mappe",
-	"date": "23.04.2022"
+	"version": 10,
+	"message": "Correzioni a label mancanti",
+	"date": "10.08.2022"
 }
