ritocco al mapper

--- a/browser/static/public/mapperVersion.json
+++ b/browser/static/public/mapperVersion.json
@@ -1,5 +1,5 @@
 {
-	"version": 10,
-	"message": "Correzioni a label mancanti",
-	"date": "10.08.2022"
+	"version": 11,
+	"message": "Tipi di stanza aggiunti",
+	"date": "17.09.2022"
 }
