--- a/browser/package.json
+++ b/browser/package.json
@@ -2,22 +2,23 @@
   "name": "ts2-client",
   "description": "Tempora Sanguinis 2 Client",
   "main": "electron_main.js",
-  "version": "1.2.3",
+  "version": "1.3.2",
   "repository": {
     "type": "git",
-    "url": "https://github.com/msimic/TS2-Client"
+    "url": "https://github.com/temporasanguinis/TS2-Client"
   },
   "keywords": [
     "mud",
     "tempora",
     "sanguinis",
     "web",
+    "telnet",
     "electron"
   ],
   "author": "Marino Šimić <marino.simic@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/msimic/TS2-Client/issues"
+    "url": "https://github.com/temporasanguinis/TS2-Client/issues"
   },
   "scripts": {
     "postinstall": "node tools/postinstall.js && npm run electronpostinstall",
