aggiorno mapper per locale

--- a/browser/static/public/mapperVersion.json
+++ b/browser/static/public/mapperVersion.json
@@ -1,5 +1,5 @@
 {
-	"version": 11,
-	"message": "Tipi di stanza aggiunti",
-	"date": "17.09.2022"
+	"version": 13,
+	"message": "Minor buxfix, spostamento varco",
+	"date": "08.11.2022"
 }
