--- a/browser/package.json
+++ b/browser/package.json
@@ -26,6 +26,7 @@
     "compile": "tsc -p tsconfig.json",
     "webpack": "webpack",
     "build": "node tools/genAppInfo.js \"git rev-parse HEAD\" && node tools/generateHtmlHashes.js && tsc --sourceMap false -p tsconfig.json && webpack && node tools/build.js",
+    "build_for_electron": "build && rm -f dist/public/cacheServiceWorker.js",
     "build-dev": "node tools/genAppInfo.js \"git rev-parse HEAD\" && tsc -p tsconfig.json && webpack --mode=development --config webpack.config.dev.js",
     "start": "tsc -p tsconfig.json && webpack-dev-server --config ./webpack.config.dev.js --hot",
     "build-test": "tsc -p tsconfig.test.json && webpack --config webpack.config.test.js",
