--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Build/release Electron app
         uses: ZacharyWin/z-electron-builder@v0.0.2
         with:
+          build_script_name: build_for_electron
           package_root: browser
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
