--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,10 @@
 name: Build/release
 
-on: push
+on:
+  push:
+    tags:
+      # Build on every tag in the form v1.2.3-something.4
+      - 'v*'
 
 jobs:
   release:
@@ -30,4 +34,4 @@ jobs:
 
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          release: true
