--- a/browser/package.json
+++ b/browser/package.json
@@ -2,7 +2,7 @@
   "name": "ts2-client",
   "description": "Tempora Sanguinis 2 Client",
   "main": "electron_main.js",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "repository": {
     "type": "git",
     "url": "https://github.com/temporasanguinis/TS2-Client"
@@ -45,6 +45,7 @@
     "@types/fingerprintjs2": "^2.0.0",
     "@types/jquery": "^2.0.60",
     "@types/lz-string": "^1.3.34",
+    "@types/marked": "^4.0.8",
     "@types/node": "^18.11.9",
     "@types/qunit": "^2.11.3",
     "@types/socket.io-client": "^1.4.36",
@@ -54,11 +55,13 @@
     "css-element-queries": "^1.2.3",
     "del": "^6.0.0",
     "electron-is-dev": "^1.2.0",
+    "highlight.js": "^11.7.0",
     "hotkeys-js": "^3.8.7",
     "jquery": "^3.6.0",
     "jqwidgets-framework": "^9.1.6",
     "lz-string": "^1.4.4",
     "markdown-it": "^12.3.2",
+    "marked": "^4.2.5",
     "moxios": "^0.4.0",
     "ngraph.graph": "^20.0.0",
     "ngraph.path": "^1.4.0",
