--- a/browser/package.json
+++ b/browser/package.json
@@ -2,7 +2,7 @@
   "name": "ts2-client",
   "description": "Tempora Sanguinis 2 Client",
   "main": "electron_main.js",
-  "version": "1.3.7",
+  "version": "1.3.8",
   "repository": {
     "type": "git",
     "url": "https://github.com/temporasanguinis/TS2-Client"
@@ -15,7 +15,8 @@
     "telnet",
     "electron"
   ],
-  "author": "Marino Šimić <marino.simic@gmail.com>",
+  "author": "Marino Šimić <marino.simic@gmail.com> (Auriel)",
+  "contributors": ["Matteo (Mikko) <triggers, help>","Gaetano (Traxter) <mappe>"],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/temporasanguinis/TS2-Client/issues"
@@ -57,6 +58,7 @@
     "electron-is-dev": "^1.2.0",
     "highlight.js": "^11.7.0",
     "hotkeys-js": "^3.8.7",
+    "idb": "^7.1.1",
     "jquery": "^3.6.0",
     "jqwidgets-framework": "^9.1.6",
     "lz-string": "^1.4.4",
@@ -83,11 +85,11 @@
     "copy-webpack-plugin": "^6.0.0",
     "fs-extra": "^2.1.2",
     "html-webpack-plugin": "^5.0.4",
+    "json5": "^2.2.3",
     "typescript": "^4.1.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.7.4",
-    "json5": "^2.2.3"
+    "webpack-dev-server": "^4.7.4"
   },
   "build": {
     "productName": "ts2-client",
