--- a/browser/static/public/mapperVersion.json
+++ b/browser/static/public/mapperVersion.json
@@ -1,5 +1,5 @@
 {
-	"version": 13,
-	"message": "Minor buxfix, spostamento varco",
-	"date": "08.11.2022"
+	"version": 19,
+	"message": "bugfix vai",
+	"date": "09.02.2023"
 }
