--- a/browser/package.json
+++ b/browser/package.json
@@ -26,9 +26,9 @@
     "electronpostinstall": "echo electron-builder install-app-deps",
     "compile": "tsc -p tsconfig.json",
     "webpack": "webpack",
-    "build": "node tools/genAppInfo.js \"git rev-parse HEAD\" && node tools/generateHtmlHashes.js && tsc --sourceMap false -p tsconfig.json && webpack && node tools/build.js",
-    "build_for_electron": "npm run build && rm -f dist/public/cacheServiceWorker.js",
-    "build-dev": "node tools/genAppInfo.js \"git rev-parse HEAD\" && tsc -p tsconfig.json && webpack --mode=development --config webpack.config.dev.js",
+    "build": "node tools/genAppInfo.js \"git rev-parse HEAD\" && node tools/merge-contrib.js && node tools/generateHtmlHashes.js && tsc --sourceMap false -p tsconfig.json && webpack && node tools/build.js",
+    "build_for_electron": "node tools/merge-contrib.js && npm run build && rm -f dist/public/cacheServiceWorker.js",
+    "build-dev": "node tools/genAppInfo.js \"git rev-parse HEAD\" && node tools/merge-contrib.js && tsc -p tsconfig.json && webpack --mode=development --config webpack.config.dev.js",
     "start": "tsc -p tsconfig.json && webpack-dev-server --config ./webpack.config.dev.js --hot",
     "build-test": "tsc -p tsconfig.test.json && webpack --config webpack.config.test.js",
     "build-test-output": "tsc -p tsconfig.test.json && webpack --config webpack.config.test_output.js",
@@ -38,7 +38,8 @@
     "electronMac": "rm -f dist/public/cacheServiceWorker.js && electron-builder --mac --x64",
     "electronLinuxBuild": "rm -f dist/public/cacheServiceWorker.js && electron-builder --linux --x64",
     "electronLinux": "node tools/dockerCheck.js && node tools/linux-electron-build.js \"%PWD%\" \"electronuserland/builder\"",
-    "publish": "npm run electronWindows && npm run electronLinux && npm run electronMac"
+    "publish": "npm run build",
+    "publishElectron": "npm run build_for_electron && npm run electronWindows && npm run electronLinux && npm run electronMac"
   },
   "dependencies": {
     "@fingerprintjs/fingerprintjs": "^2.1.5",
@@ -69,7 +70,7 @@
     "ngraph.path": "^1.4.0",
     "qunit": "^2.17.2",
     "simplebar": "^5.3.6",
-    "socket.io-client": "^4.1.2",
+    "socket.io-client": "^4.5.3",
     "strip-ansi": "^6.0.1",
     "ts-loader": "^8.3.0",
     "ts-md5": "^1.2.11"
