--- a/browser/static/public/mapperVersion.json
+++ b/browser/static/public/mapperVersion.json
@@ -1,5 +1,5 @@
 {
-	"version": 19,
-	"message": "bugfix vai",
-	"date": "09.02.2023"
+	"version": 25,
+	"message": "Kiruna FIX",
+	"date": "26.09.2023"
 }
