--- a/browser/package.json
+++ b/browser/package.json
@@ -87,6 +87,7 @@
     "@types/resize-observer-browser": "^0.1.7",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.0",
+    "electron": "^27.0.0",
     "electron-builder": "^24.6.4",
     "fs-extra": "^2.1.2",
     "html-webpack-plugin": "^5.0.4",
